--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,11 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.sh]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
