--- a/include/editor/.editorconfig.template
+++ b/include/editor/.editorconfig.template
@@ -8,6 +8,10 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.sh]
+indent_size = 4
+trim_trailing_whitespace = true
+
 [*.md]
 insert_final_newline = false
 trim_trailing_whitespace = false
