feat: 新增scan扫描功能

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ loadingSpeed=4
 
 # the protect rules
 protectMainSwitch="off"
+
+# default scan config
+scan_keywords=("密码" "password" "passwd" "psd" "apikey" "api_key" "api-key" "api_secret" "apisecret" "api-secret" "api_token" "apitoken" "api-token" "token")
